fix: some styles for dark mode

--- a/notes/.vuepress/theme/styles/code.styl
+++ b/notes/.vuepress/theme/styles/code.styl
@@ -1,10 +1,10 @@
 {$contentClass}
   code
-    color lighten($textColor, 20%)
+    color var(--inline-code-text)
     padding 0.25rem 0.5rem
     margin 0
     font-size 0.85em
-    background-color rgba(27,31,35,0.05)
+    background-color var(--inline-code-bg)
     border-radius 3px
     .token
       &.deleted
