--- a/notes/.vuepress/theme/styles/index.styl
+++ b/notes/.vuepress/theme/styles/index.styl
@@ -137,7 +137,7 @@ h1
 h2
   font-size 1.65rem
   padding-bottom .3rem
-  border-bottom 1px solid $borderColor
+  border-bottom 1px solid var(--border-color)
 
 h3
   font-size 1.35rem
