--- a/notes/.vuepress/theme/styles/mode.styl
+++ b/notes/.vuepress/theme/styles/mode.styl
@@ -18,6 +18,8 @@
   --text-color-sub $textColorSub
   --border-color $borderColor
   --code-color $codeColor
+  --inline-code-text: $inlineCodeText
+  --inline-code-bg: $inlineCodeBg
   --mask-color $maskColor
   --accent-color $accentColor
   @media (prefers-color-scheme: dark)
@@ -40,5 +42,7 @@
     --text-color-sub $textColorSubDark
     --border-color $borderColorDark
     --code-color $codeColorDark
+    --inline-code-text: $inlineCodeTextDark
+    --inline-code-bg: $inlineCodeBgDark
     --mask-color $maskColorDark
     --accent-color $accentColorDark
